# research_extender

./: .gitignore  README.md  latex_data.json  math_concepts.json  pyproject.toml
AST_code/AST_Chp2_FieldDistribution/: main.json
AST_code/AST_Chp2_FieldDistribution/src/: __init__.json
AST_code/AST_LaTeX/: Appendix.json  Chp1_Intro.json  Chp2_CNN.json  Chp3_RNN.json  Chp4_MDP.json  Chp5_RL.json  Conclusion.json  Titlepage.json
KG_code/KG_Chp2_FieldDistribution/: entities.json  graph.json  relationships.json
KG_code/KG_Chp2_FieldDistribution/.lightrag_work/: graph_chunk_entity_relation.graphml  kv_store_llm_response_cache.json  vdb_entities.json  vdb_relationships.json
src/: README.md  cli_assistant.py  config.yaml  knowledge_graph_builder.py  knowledge_graph_builder_Anthropic.py  latex_processor.py  research_extender.py  research_extender_Anthropic.py  run_extension_pipeline.py
src/graph_generator/: ast_to_KG.py  ast_to_KG.py.txt  code_extractor_1.py.txt  extract_KG.py.txt  extract_KG_python.py  latex_code_extractor.py  python_code_extractor.py
thesis_code/Chp2_MagneticFieldPredictor/magnetic_field_predictor/: README.md  config_dl.yaml  config_pinn.yaml  main.py
thesis_code/Chp3_PerformanceMapsPrediction/: README.md  config_attention.yaml  config_rnn.yaml  main.py
thesis_code/Chp4_MDP_TO/: README.md  config.yaml  main.py
thesis_code/Chp5_DRL_TO/: README.md  config_a2c.yaml  config_dqn.yaml  config_ppo.yaml  main.py
thesis_latex/Chapters/: Appendix.tex  Chp1_Intro.tex  Chp2_CNN.tex  Chp3_RNN.tex  Chp4_MDP.tex  Chp5_RL.tex  Conclusion.tex  Titlepage.tex
(+31 files in other folders)
